fixed profile footer overlap

--- a/src/components/Profile/Profile.scss
+++ b/src/components/Profile/Profile.scss
@@ -3,7 +3,7 @@
   // font-family: neuzeit-grotesk, sans-serif;
   font-style: normal;
   font-weight: 300;
-  height: 100vh;
+  height: fit-content;
   width: 100vw;
   margin-top: -120px;
 }
@@ -28,6 +28,7 @@
 .profile-container {
   background: rgb(231, 231, 231);
   margin: 15px;
+  margin-bottom: 0;
   height: 100vh;
   width: unquote("-webkit-calc(100% - 30px)");
   display: flex;
